--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
     "chai": "^4.2.0",
     "express": "^4.16.4",
     "mocha": "^5.2.0",
+    "mock-express-request": "^0.2.2",
+    "mock-express-response": "^0.2.2",
     "mongoose": "^5.3.7",
+    "node-mocks-http": "^1.7.3",
     "request": "^2.88.0",
-    "sinon": "^7.1.0"
+    "sinon": "^7.1.0",
+    "sinon-express-mock": "^2.0.5"
   }
 }
